# ThreeSteiner

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: serve_plan.py
examples/by_terminal_count/: n02.geojson  n02.json  n03.geojson  n03.json  n04.geojson  n04.json  n05.geojson  n05.json  n06.geojson  n06.json  n07.geojson  n07.json  n08.geojson  n08.json  n09.geojson  n09.json  n15.geojson  n15.json  summary.json
examples/plan_prototype/: index.html
schemas/: plan_request.example.json  plan_response.example.json
scripts/: check_n03.py  ci_test.sh  compare_n03_params.py  compare_n09_visual.py  demo_terminal_counts.py
src/network_planner/: __init__.py
tests/: conftest.py  demo_scene.py  test_api.py  test_benchmark.py  test_euclid_zones.py  test_export_gpkg.py  test_full_tree.py  test_geosteiner_candidates.py  test_plan_api.py  test_plan_request_load.py  test_projection.py  test_steiner3.py  test_steiner4.py  test_terminal_degree.py  test_terminal_outgoing.py  test_terminal_snap.py  test_validation.py  test_zone_buffer_terminal.py  test_zone_categories.py
tests/fixtures/: generate_fixtures.py  geosteiner_bb_sample.txt  plan_request_euclid.json  plan_request_euclid_zones.json  (+3 more)
topo_network/: PARAMETERS.ru.md  README.ru.md  __init__.py  adjusted_tree.py  api.py  benchmark.py  cost_surface.py  euclid_visibility.py  euclid_zones.py  export.py  geosteiner_candidates.py  lcp.py  models.py  network_tree.py  pipeline.py  plan_request.py  routing_graph.py  terminal_outgoing.py  validation.py  zone_categories.py
(+24 files in other folders)
