[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topo-network"
version = "0.1.0"
description = "Topographic network planning API (PlanRequest → PlanResponse)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "networkx>=3.0",
    "scikit-image>=0.22",
    "steinerpy>=1.0",
    "highspy>=1.5",
    "pyproj>=3.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "matplotlib>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["topo_network"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running integration tests (SteinerPy)",
    "geosteiner: optional tests requiring GeoSteiner efst/bb binaries",
]
